Speed up ci/e2e builds (#3130)
* Make use of multi-thread builds of maven

* Bump up maven version to get rid of parallel build bug

* Apply the same to E2E tests

* Apply the same to JavaDoc task

* Revert E2E settings

* Add maven tuning opts

* Increase maven fork process memory